crates/oxc_css_parser/tests/error/less/mixin/params-after-varadic.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `;`, but found `{`
  ┌─ params-after-varadic.less:1:23
  │
1 │ .mixin(@a, @b..., @c) {}
  │                       ^
